# OS-2026

./: .gitignore  README.md
22551176_王海杰/lab2/: foo.c
22551192_潘梓月/Lab4/: calculator_imp.c
Lab4/: .gitignore  CMakeLists.txt  Lab4.md  calculator-api.cpp  calculator-api.h  npu_gemm_cli.cpp  tags
Lab4/dsp/: CMakeLists.txt  CMakePresets.json  Makefile  all.mak  calculator_imp.c  hexagon.min  hexagon_deps.min
Lab4/inc/: calculator.idl
app-helloworld/: .gitignore  debug.sh  main.c  run.sh  start_degug.sh  tags
app-helloworld/defconfigs/: qemu-arm64  qemu-x86_64
实验报告/: 实验分数说明.md
实验报告/12551015_刘荣凯/Lab1/: lab1.md
实验报告/12551015_刘荣凯/Lab2/: foo.c  lab2.md
实验报告/12551015_刘荣凯/Lab4/: Lab4.md  calculator_imp.c
实验报告/22551014_陈泽超/Lab1/: Lab1_report.md
实验报告/22551014_陈泽超/Lab2/: foo.c
实验报告/22551014_陈泽超/Lab3/: Lab3_report.md
实验报告/22551014_陈泽超/Lab4/: Lab4_report.md
实验报告/22551032_俞成成/Lab1/: lab1.md
实验报告/22551032_俞成成/Lab2/: foo.c  lab2.md
实验报告/22551032_俞成成/Lab4/: calculator_imp.c  lab4.md
实验报告/22551059_郑星云/Lab1/: Lab1.md
实验报告/22551059_郑星云/Lab2/: Lab2.md  foo.c
实验报告/22551059_郑星云/Lab3/: Lab3.md
实验报告/22551059_郑星云/Lab4/: Lab4.md
实验报告/22551063_李恒鑫/Lab1/: xxx.md
实验报告/22551063_李恒鑫/Lab2/: foo.c  xxx.md
实验报告/22551063_李恒鑫/Lab4/: calculator_imp.c  xxx.md
实验报告/22551105_王若冰/Lab2/: foo.c
实验报告/22551105_王若冰/Lab4/: calculator_imp.c
实验报告/22551150_郑煜森/Lab1/: 高级操作系统Lab1.docx
实验报告/22551155_周施男/Lab1/: Lab1实验报告.md
实验报告/22551155_周施男/Lab2/: Lab2报告.md  foo.c
实验报告/22551155_周施男/Lab3/: 论文阅读.md
实验报告/22551155_周施男/Lab4/: Lab4报告.md  calculator_imp.c
实验报告/22551164_李文杰/Lab1/: lab1.md
实验报告/22551164_李文杰/lab2/: Lab2.md  foo.c
实验报告/22551164_李文杰/lab4/: Lab4.md  calculator_imp.c
实验报告/22551166_吴梓弘/Lab1/: lab1.md
实验报告/22551166_吴梓弘/Lab2/: foo.c  lab2.md
实验报告/22551166_吴梓弘/Lab4/: Lab4.md
实验报告/22551169_杨文哲/Lab4/: calculator_imp.c
实验报告/22551169杨文哲/Lab2/: foo.c
实验报告/22551176_王海杰/lab1/: Lab1.md
实验报告/22551176_王海杰/lab2/: Lab2.md
实验报告/22551176_王海杰/lab4/: Lab4.md  calculator_imp.c
实验报告/22551189_陈恩博/Lab1/: Lab1.md
实验报告/22551281_韩金兴/: README.md
高级操作系统实验/Lab1/: 高级操作系统Lab1.docx
高级操作系统实验/Lab3/: 论文报告.md
(+51 files in other folders)
